Сonfigured form and logic ( excluded table columns)

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
             </header>
     
             <main>
-                <!-- <input id="userInput" type="text" placeholder="Add an item..."> -->
-                <!--added the id attribute to the button, cause it simplifies the coding-->
-                <!-- <button id="enter" class="enter">Add to List</button> -->
+                <input id="userInput" type="text" placeholder="Add an item...">
+                <button id="enter" class="enter">Add to List</button>
                 <!-- <h1>Your ToDo List</h1> -->
-                <!-- <div class="output" id="outputArea">
+                <div class="output" id="outputArea">
                     <table id="resultTable" ></table>
-                </div> -->
+                </div>
 
                 <!-- <button id="clearItems">Clear Checked Items</button> -->
             </main>    
