--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="css/styles.css">
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <script src="js/main.js" defer></script>
+        <script src="js/jQueryMain.js" defer></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     </head>
     <body>
         <div class="bg"></div>
